SERVER-61052 Remove wtimeout from resharding write concern